[metadata]
name = secure-cookie
version = attr: secure_cookie.__version__
url = https://palletsprojects.com/p/secure-cookie/
project_urls =
    Documentation = https://secure-cookie.palletsprojects.com/
    Code = https://github.com/pallets/secure-cookie
    Issue tracker = https://github.com/pallets/secure-cookie/issues
maintainer = Pallets
maintainer_email = contact@palletsprojects.com
license = BSD-3-Clause
license_file = LICENSE.rst
description = Secure cookie and session interface for WSGI applications.
long-description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Session
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware

[options]
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
install_requires =
    itsdangerous
    Werkzeug
package_dir =
    = src
packages = find:
include_package_data = true

[options.packages.find]
where = src

[bdist_wheel]
universal = true

[tool:pytest]
testpaths = tests

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
select = B, E, F, W, B9
# E203 = slice notation whitespace, invalid
# E501 = line length, handled by bugbear B950
# W503 = bin op line break, invalid
ignore = E203, E501, W503
# up to 88 allowed by bugbear B950
max-line-length = 80
# init is used to export public API, ignore import warnings
exclude = src/secure_cookie/__init__.py
