[metadata]
name = secure-cookie
version = 0.1.0.dev
url = https://secure-cookie.readthedocs.io/
project_urls =
    Documentation = https://secure-cookie.readthedocs.io/
    Code = https://github.com/pallets/secure-cookie
    Issue tracker = https://github.com/pallets/secure-cookie/issues
maintainer = Pallets
maintainer_email = contact@palletsprojects.com
license = BSD-3-Clause
license_file = LICENSE.rst
description = Secure cookie and session interface for WSGI applications.
long_description = file:README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Session
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware

[options]
packages = find:
package_dir = =src
include_package_data = true
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
# install_requires is in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[bdist_wheel]
universal = true

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    secure_cookie
    tests

[coverage:paths]
source =
    src
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
select = B, E, F, W, B9
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
per-file-ignores =
    # __init__ export names
    src/secure_cookie/__init__.py: F401
